<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hello"
        android:textSize="@dimen/normal_1" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_1" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/label_preview"
        android:textSize="@dimen/normal_2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_register_email" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_1" />

    <include
        layout="@layout/view_register" />

</LinearLayout>